--- a/pubs.bib
+++ b/pubs.bib
@@ -223,11 +223,18 @@ note = {[<span class="va">Verifiable Autonomy</span>]}
   url          = {https://doi.org/10.5281/zenodo.3938851}
 }
 
-@inproceedings{Stringer20a,
-  author    = {Stringer, P. and Cardoso, R. C. and Huang, X. and Dennis, L. A.},
-  title     = {Adaptable and Verifiable BDI Reasoning},
-  booktitle = {Workshop on Agents and Robots for reliable Engineered Autonomy (AREA)},
+@Inproceedings{Stringer20a,
+  author    = {Stringer, Peter and Cardoso, Rafael C. and Huang, Xiaowei and Dennis, Louise A.},
   year      = {2020},
+  title     = {Adaptable and Verifiable BDI Reasoning},
+  booktitle = {Proceedings of the First Workshop on
+               Agents and Robots for reliable Engineered Autonomy,
+                Virtual event, 4th September 2020},
+  series    = {Electronic Proceedings in Theoretical Computer Science},
+  volume    = {319},
+  publisher = {Open Publishing Association},
+  pages     = {117-125},
+  doi       = {10.4204/EPTCS.319.9},
   note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>]}
 }
 
