--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,12 @@
-@article{Cardoso_2021, 
+@inproceedings{Cardoso21b,
+      author={Rafael C. Cardoso and John L. Michaloski and Craig Schlenoff and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
+      title={Agile Tasking of Robotic Systems with Explicit Autonomy},
+      booktitle={34th International FLAIRS Conference},
+      year=2021,
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+      }
+
+@article{Cardoso21a, 
 title={A Review of Agent-Based Programming for Multi-Agent Systems}, 
 volume={10}, 
 ISSN={2073-431X}, 
@@ -147,6 +155,7 @@ publisher="Springer International Publishing",
 address="Cham",
 pages="31--58",
 isbn="978-3-030-59299-8",
+doi={10.1007/978-3-030-59299-8_2},
 note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <span class="orca">ORCA</span>]}
 }
 
