Adding image to yaml for later changes to the projects page.

--- a/_projects/s3.md
+++ b/_projects/s3.md
@@ -1,5 +1,6 @@
 ---
 title : Science of Sensor Systems Software
+image : /images/project-images/s4.png
 ---
 
 <a href="http://www.dcs.gla.ac.uk/research/S4/"> <img alt="Science of Sensor Systems Software Logo" style="float: left; margin: 1em" src="{{site.images}}project-images/s4.png"></a>
