--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,27 @@
+@inproceedings{Luckcuck21a,
+      author={Matt Luckcuck and Rafael C. Cardoso},
+      title={Formal Verification of a Map Merging Protocol in the Multi-Agent Programming Contest},
+      booktitle={9th International Workshop on Engineering Multi-Agent Systems},
+      year=2021,
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
+      }
+
+@inproceedings{Stringer21a,
+      author={Peter Stringer and Rafael C. Cardoso and Clare Dixon and Louise A. Dennis},
+      title={Implementing Durative Actions with Failure Detection in Gwendolen},
+      booktitle={9th International Workshop on Engineering Multi-Agent Systems},
+      year=2021,
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+      }
+
+@inproceedings{Cardoso21c,
+      author={Rafael C. Cardoso and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
+      title={Implementing Durative Actions with Failure Detection in Gwendolen},
+      booktitle={9th International Workshop on Engineering Multi-Agent Systems},
+      year=2021,
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
+      }
+
 @inproceedings{Cardoso21b,
       author={Rafael C. Cardoso and John L. Michaloski and Craig Schlenoff and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
       title={Agile Tasking of Robotic Systems with Explicit Autonomy},
