--- a/pubs.bib
+++ b/pubs.bib
@@ -2,7 +2,7 @@
       author={Matt Luckcuck and Rafael C. Cardoso},
       title={Formal Verification of a Map Merging Protocol in the Multi-Agent Programming Contest},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
       }
 
@@ -10,15 +10,15 @@
       author={Peter Stringer and Rafael C. Cardoso and Clare Dixon and Louise A. Dennis},
       title={Implementing Durative Actions with Failure Detection in Gwendolen},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
       }
 
 @inproceedings{Cardoso21c,
       author={Rafael C. Cardoso and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
-      title={Implementing Durative Actions with Failure Detection in Gwendolen},
+      title={Implementing Ethical Governors in BDI},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
       }
 
@@ -26,7 +26,7 @@
       author={Rafael C. Cardoso and John L. Michaloski and Craig Schlenoff and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
       title={Agile Tasking of Robotic Systems with Explicit Autonomy},
       booktitle={34th International FLAIRS Conference},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
       }
 
@@ -49,7 +49,7 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       author={Angelo Ferrando and Louise A. Dennis and Rafael C. Cardoso and Michael Fisher and Davide Ancona and Viviana Mascardi},
       title={Towards a Holistic Approach to Verification and Validation of Autonomous Cognitive Systems},
       journal={ACM Transactions on Software Engineering and Methodology},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>], To appear}
      }
       
@@ -58,7 +58,7 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       title={Explaining BDI agent behaviour through dialogue},
       editors={U.~Endriss and A.~Now\'{e} and F.~Dignum and A.~Lomuscio},
       booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
-      year=2021,
+      year={2021},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], To appear}
       }
 
@@ -67,7 +67,7 @@ author = {Louise A. Dennis and Martin Mose Bentzen and Felix Lindner and Michael
 title={Verifiable Machine Ethics in Changing Contexts},
       booktitle={35th AAAI Conference on Artificial Intelligence (AAAI 2021)},
       editors={Kevin Leyon-Brown and Mausam},
-      year=2021,
+      year={2021},
       note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>], To appear}
       }
 
@@ -83,7 +83,7 @@ title={Verifiable Machine Ethics in Changing Contexts},
   volume    = {35},
   number    = {1},
   pages     = {8},
-  year      = 2021,
+  year      = {2021},
   doi       = {10.1007/s10458-020-09487-2},
   note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
         <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
