--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,11 @@
+@article{Cardoso21d,
+      author={Rafael C. Cardoso and Georgios Kourtis and Louise A. Dennis and Clare Dixon and Marie Farrell and Michael Fisher and Matt Webster},
+      title={A Review of Verification and Validation for Space Autonomous Systems},
+      journal={Curr Robot Rep},
+      year={2021},
+      note={<span class="fs">FAIR-Space</span>], To appear}
+      }
+
 @inproceedings{Luckcuck21a,
       author={Matt Luckcuck and Rafael C. Cardoso},
       title={Formal Verification of a Map Merging Protocol in the Multi-Agent Programming Contest},
