--- a/pubs.bib
+++ b/pubs.bib
@@ -3,7 +3,7 @@
       title={A Review of Verification and Validation for Space Autonomous Systems},
       journal={Curr Robot Rep},
       year={2021},
-      note={<span class="fs">FAIR-Space</span>], To appear}
+      note={[<span class="fs">FAIR-Space</span>], To appear}
       }
 
 @inproceedings{Luckcuck21a,
@@ -11,7 +11,7 @@
       title={Formal Verification of a Map Merging Protocol in the Multi-Agent Programming Contest},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
       year={2021},
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
       }
 
 @inproceedings{Stringer21a,
@@ -27,7 +27,7 @@
       title={Implementing Ethical Governors in BDI},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
       year={2021},
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], <span class="orca">ORCA</span>]}
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
       }
 
 @inproceedings{Cardoso21b,
