--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,19 @@
+
+@Article{robotics10020067,
+AUTHOR = {Fisher, Michael and Cardoso, Rafael C. and Collins, Emily C. and Dadswell, Christopher and Dennis, Louise A. and Dixon, Clare and Farrell, Marie and Ferrando, Angelo and Huang, Xiaowei and Jump, Mike and Kourtis, Georgios and Lisitsa, Alexei and Luckcuck, Matt and Luo, Shan and Page, Vincent and Papacchini, Fabio and Webster, Matt},
+TITLE = {An Overview of Verification and Validation Challenges for Inspection Robots},
+JOURNAL = {Robotics},
+VOLUME = {10},
+YEAR = {2021},
+NUMBER = {2},
+ARTICLE-NUMBER = {67},
+URL = {https://www.mdpi.com/2218-6581/10/2/67},
+ISSN = {2218-6581},
+ABSTRACT = {The advent of sophisticated robotics and AI technology makes sending humans into hazardous and distant environments to carry out inspections increasingly avoidable. Being able to send a robot, rather than a human, into a nuclear facility or deep space is very appealing. However, building these robotic systems is just the start and we still need to carry out a range of verification and validation tasks to ensure that the systems to be deployed are as safe and reliable as possible. Based on our experience across three research and innovation hubs within the UK’s “Robots for a Safer World” programme, we present an overview of the relevant techniques and challenges in this area. As the hubs are active across nuclear, offshore, and space environments, this gives a breadth of issues common to many inspection robots.},
+DOI = {10.3390/robotics10020067},
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+}
+
 @article{Cardoso21d,
       author={Rafael C. Cardoso and Georgios Kourtis and Louise A. Dennis and Clare Dixon and Marie Farrell and Michael Fisher and Matt Webster},
       title={A Review of Verification and Validation for Space Autonomous Systems},
