--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,17 @@
+@article{cardoso21e,
+AUTHOR = {Cardoso, Rafael C. and Ferrando, Angelo and Briola, Daniela and Menghi, Claudio and Ahlbrecht, Tobias},
+TITLE = {Agents and Robots for Reliable Engineered Autonomy:A Perspective from the Organisers of AREA 2020},
+JOURNAL = {Journal of Sensor and Actuator Networks},
+VOLUME = {10},
+YEAR = {2021},
+NUMBER = {2},
+ARTICLE-NUMBER = {33},
+URL = {https://www.mdpi.com/2224-2708/10/2/33},
+ISSN = {2224-2708},
+ABSTRACT = {Multi-agent systems, robotics and software engineering are large and active research areas with many applications in academia and industry. The First Workshop on Agents and Robots for reliable Engineered Autonomy (AREA), organised the first time in 2020, aims at encouraging cross-disciplinary collaborations and exchange of ideas among researchers working in these research areas. This paper presents a perspective of the organisers that aims at highlighting the latest research trends, future directions, challenges, and open problems. It also includes feedback from the discussions held during the AREA workshop. The goal of this perspective is to provide a high-level view of current research trends for researchers that aim at working in the intersection of these research areas.},
+DOI = {10.3390/jsan10020033},
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+}
 
 @article{robotics10020067,
 author = {Fisher, Michael and Cardoso, Rafael C. and Collins, Emily C. and Dadswell, Christopher and Dennis, Louise A. and Dixon, Clare and Farrell, Marie and Ferrando, Angelo and Huang, Xiaowei and Jump, Mike and Kourtis, Georgios and Lisitsa, Alexei and Luckcuck, Matt and Luo, Shan and Page, Vincent and Papacchini, Fabio and Webster, Matt},
