--- a/pubs.bib
+++ b/pubs.bib
@@ -24,7 +24,7 @@ url = {https://www.mdpi.com/2218-6581/10/2/67},
 issn = {2218-6581},
 abstract = {The advent of sophisticated robotics and AI technology makes sending humans into hazardous and distant environments to carry out inspections increasingly avoidable. Being able to send a robot, rather than a human, into a nuclear facility or deep space is very appealing. However, building these robotic systems is just the start and we still need to carry out a range of verification and validation tasks to ensure that the systems to be deployed are as safe and reliable as possible. Based on our experience across three research and innovation hubs within the UK’s “Robots for a Safer World” programme, we present an overview of the relevant techniques and challenges in this area. As the hubs are active across nuclear, offshore, and space environments, this gives a breadth of issues common to many inspection robots.},
 doi = {10.3390/robotics10020067},
-note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>], <span class="raeng">RAEng</span>]}
 }
 
 @article{Cardoso21d,
