--- a/pubs.bib
+++ b/pubs.bib
@@ -584,8 +584,10 @@ address="Cham",
 pages="195--212",
 abstract="One of the major advantages of modular architectures in robotic systems is the ability to add or replace nodes, without needing to rearrange the whole system. In this type of system, autonomous agents can aid in the decision making and high-level control of the robot. For example, a robot may have a module for each of the effectors and sensors that it has and an agent with a plan library containing high-level plans to aid in the decision making within these modules. However, when autonomously replacing a node it can be difficult to reconfigure plans in the agent's plan library while retaining correctness. In this paper, we exploit the formal concept of capabilities in Belief-Desire-Intention agents and describe how agents can reason about these capabilities in order to reconfigure their plan library while retaining overall correctness constraints. To validate our approach, we show the implementation of our framework and an experiment using a practical example in the Mars rover scenario.",
 isbn="978-3-030-51417-4",
+doi="10.1007/978-3-030-51417-4_10",
   note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>]}
 }
+
 @inproceedings{Ferrando19EMAS,
   author    = {Angelo Ferrando and Michael Winikoff and Stephen Cranefield and Frank Dignum and Viviana Mascardi},
   title     = {On Enactability of Agent Interaction Protocols: Towards a Unified Approach},
