--- a/pubs.bib
+++ b/pubs.bib
@@ -139,6 +139,46 @@ title={Verifiable Machine Ethics in Changing Contexts},
         <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
 }
 
+
+
+@inproceedings{BourbouhFMSBD021,
+  author    = {Hamza Bourbouh and
+               Marie Farrell and
+               Anastasia Mavridou and
+               Irfan Sljivo and
+               Guillaume Brat and
+               Louise A. Dennis and
+               Michael Fisher},
+  title     = "{Integrating Formal Verification and Assurance: An Inspection Rover
+               Case Study}",
+  booktitle = {Proc. 13th International Symposium on {NASA} Formal Methods (NFM)},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12673},
+  pages     = {53--71},
+  publisher = {Springer},
+  year      = {2021},
+  doi       = {10.1007/978-3-030-76384-8\_4},
+  note={[<span class="fs">FAIR-Space</span>]}
+}
+
+@incollection{DBLP:series/lncs/0001DFGMRY21,
+  author    = {Raja Chatila and
+               Virginia Dignum and
+               Michael Fisher and
+               Fosca Giannotti and
+               Katharina Morik and
+               Stuart Russell and
+               Karen Yeung},
+  title     = "{Trustworthy {AI}}",
+  booktitle = {Reflections on Artificial Intelligence for Humanity},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {12600},
+  pages     = {13--39},
+  publisher = {Springer},
+  year      = {2021},
+  doi       = {10.1007/978-3-030-69128-8\_2}
+}
+
 @InProceedings{FerrandoAIRO,
 author="Ferrando, Angelo
 and Kootbally, Zeid
