--- a/pubs.bib
+++ b/pubs.bib
@@ -161,7 +161,7 @@ title={Verifiable Machine Ethics in Changing Contexts},
   note={[<span class="fs">FAIR-Space</span>]}
 }
 
-@incollection{DBLP:series/lncs/0001DFGMRY21,
+@incollection{GFAIH21,
   author    = {Raja Chatila and
                Virginia Dignum and
                Michael Fisher and
@@ -169,7 +169,7 @@ title={Verifiable Machine Ethics in Changing Contexts},
                Katharina Morik and
                Stuart Russell and
                Karen Yeung},
-  title     = "{Trustworthy {AI}}",
+  title     = "{Trustworthy AI}",
   booktitle = {Reflections on Artificial Intelligence for Humanity},
   series    = {Lecture Notes in Computer Science},
   volume    = {12600},
