--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@inproceedings{Tsvarkeleva21,
+      author={Mariya Tsvarkeleva and Louise A. Dennis},
+      title={No Free Lunch: Overcoming Reward Gaming in {AI} Safety Gridworlds},
+      booktitle={Proceedigns of the 4th International Workshop on Artificial Intelligence Safety Engineering (WAISE 2021)},
+      year=2021,
+      note={<span class="tas_vn">TAS Verifiability Node</span>], To appear}
+      }
+
+
 @article{cardoso21e,
 AUTHOR = {Cardoso, Rafael C. and Ferrando, Angelo and Briola, Daniela and Menghi, Claudio and Ahlbrecht, Tobias},
 TITLE = {Agents and Robots for Reliable Engineered Autonomy:A Perspective from the Organisers of AREA 2020},
