--- a/pubs.bib
+++ b/pubs.bib
@@ -1,9 +1,9 @@
 @inproceedings{Tsvarkeleva21,
       author={Mariya Tsvarkeleva and Louise A. Dennis},
       title={No Free Lunch: Overcoming Reward Gaming in {AI} Safety Gridworlds},
-      booktitle={Proceedigns of the 4th International Workshop on Artificial Intelligence Safety Engineering (WAISE 2021)},
+      booktitle={Proceedings of the 4th International Workshop on Artificial Intelligence Safety Engineering (WAISE 2021)},
       year=2021,
-      note={<span class="tas_vn">TAS Verifiability Node</span>], To appear}
+      note={[<span class="tas_vn">TAS Verifiability Node</span>], To appear}
       }
 
 
