--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,23 @@
+@Article{Cardoso21f,
+author={Cardoso, Rafael C.
+and Kourtis, Georgios
+and Dennis, Louise A.
+and Dixon, Clare
+and Farrell, Marie
+and Fisher, Michael
+and Webster, Matt},
+title={A Review of Verification and Validation for Space Autonomous Systems},
+journal={Current Robotics Reports},
+year={2021},
+month={Jun},
+day={18},
+abstract={The deployment of hardware (e.g., robots, satellites, etc.) to space is a costly and complex endeavor. It is of extreme importance that on-board systems are verified and validated through a variety of verification and validation techniques, especially in the case of autonomous systems. In this paper, we discuss a number of approaches from the literature that are relevant or directly applied to the verification and validation of systems in space, with an emphasis on autonomy.},
+issn={2662-4087},
+doi={10.1007/s43154-021-00058-1},
+url={https://doi.org/10.1007/s43154-021-00058-1},
+note={[<span class="fs">FAIR-Space</span>]}
+}
+
 @inproceedings{Tsvarkeleva21,
       author={Mariya Tsvarkeleva and Louise A. Dennis},
       title={No Free Lunch: Overcoming Reward Gaming in {AI} Safety Gridworlds},
