--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,4 @@
-@Article{Cardoso21f,
+@Article{Cardoso21d,
 author={Cardoso, Rafael C.
 and Kourtis, Georgios
 and Dennis, Louise A.
@@ -55,14 +55,6 @@ abstract = {The advent of sophisticated robotics and AI technology makes sending
 doi = {10.3390/robotics10020067},
 note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>, <span class="raeng">RAEng</span>]}
 }
-
-@article{Cardoso21d,
-      author={Rafael C. Cardoso and Georgios Kourtis and Louise A. Dennis and Clare Dixon and Marie Farrell and Michael Fisher and Matt Webster},
-      title={A Review of Verification and Validation for Space Autonomous Systems},
-      journal={Curr Robot Rep},
-      year={2021},
-      note={[<span class="fs">FAIR-Space</span>], To appear}
-      }
 
 @inproceedings{Luckcuck21a,
       author={Matt Luckcuck and Rafael C. Cardoso},
