--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,11 @@
+@aricle{p7001,
+      author={Alan F. T. Winfield and Serena Booth and Louise A. Dennis and Takashi Egawa and Helen Hastie and Naomi Jacobs and Roderick Muttram and Joanna I. Olszewska and Fahimeh Rajabiyazdi and Andreas Theodorou and Mark Underwood and Robert H. Wortham and Eleanor Watson},
+      title={{IEEE P7001}: A New Standard on Transparency},
+      journal={Frontiers in Robotics and AI, section Ethics in Robotics and Artificial Intelligence},
+      year=2021,
+      note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="va">Verifiable Autonomy</span>], To Appear}
+      }
+      
 @Article{Cardoso21d,
 author={Cardoso, Rafael C.
 and Kourtis, Georgios
