--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,35 @@
+@inproceedings{JohnIMECE,
+  title={Agile Tasking of Robotic Kitting},
+  author={Michaloski, John and Aksu, Murat and Schlenoff, Craig and Cardoso, Rafael C. and Fisher, Michael},
+  booktitle={Proceedings of the ASME 2021 International Mechanical Engineering Congress and Exposition (IMECE2021)},
+  year={2021},
+  note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+}
+
+@inproceedings{Cardoso21e,
+  title={Automated Planning and BDI Agents: a Case Study},
+  author={Cardoso, Rafael C. and Ferrando, Angelo and Papacchini, Fabio},
+  booktitle={Proceedings of the 19th International Conference on Practical Applications of Agents and Multi-Agent Systems (PAAMS 2021)},
+  year={2021},
+  note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+}
+
+@inproceedings{FerrandoVortex,
+  title={RVPLAN: A General Purpose Framework for Replanning using Runtime Verification},
+  author={Ferrando, Angelo and Cardoso, Rafael C.},
+  booktitle={Proceedings of the 5th ACM International Workshop on Verification and mOnitoring at Runtime EXecution (VORTEX'21)},
+  year={2021},
+  note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+}
+
+@inproceedings{fisher2021increasing,
+  title={Increasing Confidence in Autonomous Systems},
+  author={Fisher, Michael and Ferrando, Angelo and Cardoso, Rafael C.},
+  booktitle={Proceedings of the 5th ACM International Workshop on Verification and mOnitoring at Runtime EXecution (VORTEX'21)},
+  year={2021},
+  note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
+}
+
 @aricle{p7001,
       author={Alan F. T. Winfield and Serena Booth and Louise A. Dennis and Takashi Egawa and Helen Hastie and Naomi Jacobs and Roderick Muttram and Joanna I. Olszewska and Fahimeh Rajabiyazdi and Andreas Theodorou and Mark Underwood and Robert H. Wortham and Eleanor Watson},
       title={{IEEE P7001}: A New Standard on Transparency},
