--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,17 @@
+@Article{areaeditorial,
+AUTHOR = {Cardoso, Rafael C. and Ferrando, Angelo and Briola, Daniela and Menghi, Claudio and Ahlbrecht, Tobias},
+TITLE = {Special Issue: Agents and Robots for Reliable Engineered Autonomy},
+JOURNAL = {Journal of Sensor and Actuator Networks},
+VOLUME = {10},
+YEAR = {2021},
+NUMBER = {3},
+ARTICLE-NUMBER = {47},
+URL = {https://www.mdpi.com/2224-2708/10/3/47},
+ISSN = {2224-2708},
+ABSTRACT = {The study of autonomous agents is a well-established area that has been researched for decades, both from a design and implementation viewpoint [...]},
+DOI = {10.3390/jsan10030047}
+}
+
 @inproceedings{JohnIMECE,
   title={Agile Tasking of Robotic Kitting},
   author={Michaloski, John and Aksu, Murat and Schlenoff, Craig and Cardoso, Rafael C. and Fisher, Michael},
