--- a/pubs.bib
+++ b/pubs.bib
@@ -199,16 +199,21 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       editors={U.~Endriss and A.~Now\'{e} and F.~Dignum and A.~Lomuscio},
       booktitle={20th International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS 2021)},
       year={2021},
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>], To appear}
+      pages = {429–437},
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
       }
 
-@InProceedings{DennisAAAI21,
+@article{DennisAAAI21,
 author = {Louise A. Dennis and Martin Mose Bentzen and Felix Lindner and Michael Fisher},
 title={Verifiable Machine Ethics in Changing Contexts},
-      booktitle={35th AAAI Conference on Artificial Intelligence (AAAI 2021)},
-      editors={Kevin Leyon-Brown and Mausam},
-      year={2021},
-      note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>], To appear}
+volume={35}, 
+url={https://ojs.aaai.org/index.php/AAAI/article/view/17366},   
+number={13}, 
+journal={Proceedings of the AAAI Conference on Artificial Intelligence}, 
+year={2021}, 
+month={May}, 
+pages={11470-11478} ,
+      note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
       }
 
 @article{FisherMRSWY21,
