--- a/pubs.bib
+++ b/pubs.bib
@@ -60,11 +60,26 @@ DOI = {10.3390/jsan10030047}
 }
 
 @aricle{p7001,
-      author={Alan F. T. Winfield and Serena Booth and Louise A. Dennis and Takashi Egawa and Helen Hastie and Naomi Jacobs and Roderick Muttram and Joanna I. Olszewska and Fahimeh Rajabiyazdi and Andreas Theodorou and Mark Underwood and Robert H. Wortham and Eleanor Watson},
-      title={{IEEE P7001}: A New Standard on Transparency},
-      journal={Frontiers in Robotics and AI, section Ethics in Robotics and Artificial Intelligence},
-      year=2021,
-      note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="va">Verifiable Autonomy</span>], To Appear}
+  
+AUTHOR={Winfield, Alan F. T. and Booth, Serena and Dennis, Louise A. and Egawa, Takashi and Hastie, Helen and Jacobs, Naomi and Muttram, Roderick I. and Olszewska, Joanna I. and Rajabiyazdi, Fahimeh and Theodorou, Andreas and Underwood, Mark A. and Wortham, Robert H. and Watson, Eleanor},   
+	 
+TITLE={IEEE P7001: A Proposed Standard on Transparency},      
+	
+JOURNAL={Frontiers in Robotics and AI},      
+	
+VOLUME={8},      
+
+PAGES={225},     
+	
+YEAR={2021},      
+	  
+URL={https://www.frontiersin.org/article/10.3389/frobt.2021.665729},       
+	
+DOI={10.3389/frobt.2021.665729},      
+	
+ISSN={2296-9144},   
+ABSTRACT={This paper describes IEEE P7001, a new draft standard on transparency of autonomous systems<xref ref-type="fn" rid="fn1"><sup>1</sup></xref>. In the paper, we outline the development and structure of the draft standard. We present the rationale for transparency as a measurable, testable property. We outline five stakeholder groups: users, the general public and bystanders, safety certification agencies, incident/accident investigators and lawyers/expert witnesses, and explain the thinking behind the normative definitions of “levels” of transparency for each stakeholder group in P7001. The paper illustrates the application of P7001 through worked examples of both specification and assessment of fictional autonomous systems.}
+      note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="va">Verifiable Autonomy</span>]}
       }
       
 @Article{Cardoso21d,
