--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@inproceedings{AlvesERS21,
+      author={Gleifer Alves and Louise A. Dennis and Michael Fisher},
+      title={An Agent-based architecture with support to Ethical Decisions on a Road Traffic Scenario},
+      booktitle={IROS Workshop on Building and Evaluating Ethical Robotic Systems (ERS 2021)},
+      year=2021,
+      note={[<span class="tas_vn">TAS Verifiability Node</span>, To appear]}
+      }
+
+
 @article{luckcuck_using_2021,
 author = {Matt Luckcuck},
 title ={Using formal methods for autonomous systems: Five recipes for formal verification},
