Updating my recipes paper: year = {0} -> year = {2021}!

--- a/pubs.bib
+++ b/pubs.bib
@@ -14,11 +14,10 @@ journal = {Proceedings of the Institution of Mechanical Engineers, Part O: Journ
 volume = {0},
 number = {0},
 pages = {1748006X211034970},
-year = {0},
+year = {2021},
 doi = {10.1177/1748006X211034970},
-
 URL = { https://doi.org/10.1177/1748006X211034970},
-eprint = { https://doi.org/10.1177/1748006X211034970 },
+eprint = { https://doi.org/10.1177/1748006X211034970 }
 }
 
 @Article{jsan10030041,
