--- a/pubs.bib
+++ b/pubs.bib
@@ -17,7 +17,8 @@ pages = {1748006X211034970},
 year = {2021},
 doi = {10.1177/1748006X211034970},
 URL = { https://doi.org/10.1177/1748006X211034970},
-eprint = { https://doi.org/10.1177/1748006X211034970 }
+eprint = { https://doi.org/10.1177/1748006X211034970 },
+note={[<span class="rain">RAIN</span>]}
 }
 
 @Article{jsan10030041,
