--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,12 @@
-@inproceedings{AlvesERS21,
+@inproceedings{DennisCME21,
+      author={Louise A. Dennis and Cristina Perea del Olmo},
+      title={A Defeasible Logic Implementation of Ethical Reasoning},
+      booktitle={First International Workshop on Computational Machine Ethics (CME-2021)},
+      year=2021,
+      note={[<span class="tas_vn">TAS Verifiability Node</span>, To appear]}
+      }
+      
+      @inproceedings{AlvesERS21,
       author={Gleifer Alves and Louise A. Dennis and Michael Fisher},
       title={An Agent-based architecture with support to Ethical Decisions on a Road Traffic Scenario},
       booktitle={IROS Workshop on Building and Evaluating Ethical Robotic Systems (ERS 2021)},
