--- a/pubs.bib
+++ b/pubs.bib
@@ -10,7 +10,7 @@ URL = {https://www.mdpi.com/2218-6581/10/3/97},
 ISSN = {2218-6581},
 ABSTRACT = {A drive to reduce costs, carbon emissions, and the number of required personnel in the offshore energy industry has led to proposals for the increased use of autonomous/robotic systems for many maintenance tasks. There are questions over how such missions can be shown to be safe. A corollary exists in the manned aviation world for helicopter–ship operations where a test pilot attempts to operate from a ship under a range of wind conditions and provides subjective feedback on the level of difficulty encountered. This defines the ship–helicopter operating limit envelope (SHOL). Due to the cost of creating a SHOL there has been considerable research activity to demonstrate that much of this process can be performed virtually. Unmanned vehicles, however, have no test pilot to provide feedback. This paper therefore explores the possibility of adapting manned simulation techniques to the unmanned world to demonstrate that a mission is safe. Through flight modelling and simulation techniques it is shown that operating envelopes can be created for an oil rig inspection task and that, by using variable performance specifications, these can be tailored to suit the level of acceptable risk. The operating envelopes produced provide condensed and intelligible information regarding the environmental conditions under which the UAS can perform the task.},
 DOI = {10.3390/robotics10030097},
-note={[<span class="ORCA">ORCA</span>]}
+note={[<span class="orca">ORCA</span>]}
 }
 
 @inproceedings{DennisCME21,
