--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,29 @@
+@inproceedings{Zhang2021,
+author={Tianyu Zhang and Louise A. Dennis and Matt Webster},
+title={{AsteroidX}: An Asteroid Exploration Simulation and Visualisation Tool},
+booktitle={Workshop on Advances in Space Robotics and back to Earth},
+year=2021,
+note={[<span class="fs">FAIR-Space</span>, To Appear]}
+}
+
+@Inbook{Slocombe2021,
+author="Slocombe, Will
+and Dennis, Louise",
+editor="Dainton, Barry
+and Slocombe, Will
+and Tanyi, Attila",
+title="Enforcing Machine Ethics: Considering Governor Modules through Martha Wells's Murderbot Diaries",
+bookTitle="Minding the Future: Artificial Intelligence, Philosophical Visions and Science Fiction",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="65--86",
+abstract="This chapter examines the ways in which ``governor modules,'' a form of technological intervention that can control how an AI behaves and is permitted to act, are represented in Martha Wells's Murderbot Diaries series. Exploring the assumptions behind the technology in the series---what kind of actions it prohibits, and how it prohibits them---it then turns to current research in the field of computer science to examine how current models of ``model judges'' compare to Wells's fictional setting. In so doing, it seeks to consider how autonomy and agency are constrained by such technologies, and the problems involved in situating and programming such a system.",
+isbn="978-3-030-64269-3",
+doi="10.1007/978-3-030-64269-3_4",
+url="https://doi.org/10.1007/978-3-030-64269-3_4"
+}
+
 @Article{PDWJF21,
 AUTHOR = {Page, Vincent and Dadswell, Christopher and Webster, Matt and Jump, Mike and Fisher, Michael},
 TITLE = "{Towards the Determination of Safe Operating Envelopes for Autonomous UAS in Offshore Inspection Missions}",
