--- a/pubs.bib
+++ b/pubs.bib
@@ -6,7 +6,7 @@ year=2021,
 note={[<span class="fs">FAIR-Space</span>, To Appear]}
 }
 
-@Inbook{Slocombe2021,
+@incollection{Slocombe2021,
 author="Slocombe, Will
 and Dennis, Louise",
 editor="Dainton, Barry
