--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,11 @@
+@inproceedings{FerrandoFMAS,
+  title={Towards Partial Monitoring: It is Always too Soon to Give Up},
+  author={Ferrando, Angelo and Cardoso, Rafael C.},
+  booktitle={Proceedings Third Workshop on Formal Methods for Autonomous Systems},
+  year={2021},
+  note={[<span class="raeng">RAEng</span>]}
+}
+
 @inproceedings{Zhang2021,
 author={Tianyu Zhang and Louise A. Dennis and Matt Webster},
 title={{AsteroidX}: An Asteroid Exploration Simulation and Visualisation Tool},
