--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,16 @@
+@article{TeachMe21,
+author = {Kheng Lee Koay and Matt Webster and Clare Dixon and Paul Gainer and Dag Syrdal and Michael Fisher and Kerstin Dautenhahn},
+doi = {doi:10.1515/pjbr-2021-0028},
+url = {https://doi.org/10.1515/pjbr-2021-0028},
+title = "{Use and Usability of Software Verification Methods to Detect Behaviour Interference when Teaching an Assistive Home Companion Robot: A proof-of-concept study}",
+journal = {Paladyn, Journal of Behavioral Robotics},
+number = {1},
+volume = {12},
+year = {2021},
+pages = {402--422},
+note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+}
+
 @inproceedings{FerrandoFMAS,
   title={Towards Partial Monitoring: It is Always too Soon to Give Up},
   author={Ferrando, Angelo and Cardoso, Rafael C.},
