--- a/pubs.bib
+++ b/pubs.bib
@@ -1,7 +1,7 @@
 @article{TeachMe21,
 author = {Kheng Lee Koay and Matt Webster and Clare Dixon and Paul Gainer and Dag Syrdal and Michael Fisher and Kerstin Dautenhahn},
 doi = {doi:10.1515/pjbr-2021-0028},
-url = {https://doi.org/10.1515/pjbr-2021-0028},
+url = {https://www.degruyter.com/document/doi/10.1515/pjbr-2021-0028/html},
 title = "{Use and Usability of Software Verification Methods to Detect Behaviour Interference when Teaching an Assistive Home Companion Robot: A proof-of-concept study}",
 journal = {Paladyn, Journal of Behavioral Robotics},
 number = {1},
