--- a/pubs.bib
+++ b/pubs.bib
@@ -279,7 +279,7 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       title={Implementing Ethical Governors in BDI},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
       year={2021},
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
+      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
       }
 
 @inproceedings{Cardoso21b,
