--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,24 @@
+
+@techreport{luckcuck_matt_principles_2021,
+	title = {Principles for the {Development} and {Assurance} of {Autonomous} {Systems} for {Safe} {Use} in {Hazardous} {Environments}},
+	copyright = {Creative Commons Attribution 4.0 International, Open Access},
+	url = {https://zenodo.org/record/5012322},
+	abstract = {Autonomous systems are increasingly being used (or proposed for use) in situations where they are near or interact (physically or otherwise) with humans. They can be useful for performing tasks that are dirty or dangerous, or jobs that are simply distant or dull. This white paper sets out principles to consider when designing, developing, and regulating autonomous systems that are required to operate in hazardous environments. Autonomous systems use software to make decisions without the need for human control. They are often embedded in a robotic system, to enable interaction with the real world. This means that autonomous robotic systems are often safety-critical, where failures can cause human harm or death. For the sorts of autonomous robotic systems considered by this white paper, the risk of harm is likely to fall on human workers (the system’s users or operators). Autonomous systems also raise ssues of security and data privacy, both because of the sensitive data that the system might process and because a security failure can cause a safety failure. {\textless}strong{\textgreater}Scope{\textless}/strong{\textgreater} This white paper is intended to be an add-on to the relevant existing standards and guidance for (for example) robotics, electronic systems, control systems, and safety-critical software. These existing standards provide good practice for their respective areas, but do not provide guidance for autonomous systems. This white paper adds to the emerging good practice for developing autonomous robotic systems that are amenable to strong Verification \&amp; Validation. The intended audience of this white paper is developers of autonomous and robotic systems. It aims to provide a description of things that need to be demonstrable by or of their systems, and recommendations of ways to achieve this. This aims to enable strong Verification \&amp; Validation of the resulting autonomous system, and to mitigate some of the hazards already occurring in autonomous systems. {\textless}strong{\textgreater}Acknowledgments{\textless}/strong{\textgreater} Our thanks go to Vince Page, and Xiaowei Huang for contributing their expert advice; and to our early reviewers: Xingyu Zhao, Başak Sarac̣ -Lesavre, and Nick Hawes for their invaluable discussion and comments.},
+	language = {en},
+	urldate = {2021-08-30},
+	institution = {Zenodo},
+	author = {Luckcuck, Matt and Fisher, Michael and Dennis, Louise and Frost, Steve and White, Andy and Styles, Doug},
+	month = jun,
+	year = {2021},
+	doi = {10.5281/ZENODO.5012322},
+	keywords = {Robotics, Validation, Verification, Autonomous Systems, Assurance, Hazardous Environments},
+	annote = {Other
+This white paper was written as part of the Robotics and AI in Nuclear (RAIN) project and is also available on the RAIN website: https://rainhub.org.uk/principles-for-the-development-and-assurance-of-autonomous-systems-for-safe-use-in-hazardous-environments-white-paper-published/},
+note={[<span class="rain">RAIN</span>]}
+}
+
+
+
 @InProceedings{Cardoso21f,
 author="Cardoso, Rafael C.
 and Ferrando, Angelo
