--- a/_events/fmas2021.md
+++ b/_events/fmas2021.md
@@ -1,5 +1,5 @@
 ---
-layout: event
+layout: redirect
 title: "Third Workshop on Formal Methods for Autonomous Systems"
 belogsToSeries: fmas
 image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
