--- a/_events/fmas2021.md
+++ b/_events/fmas2021.md
@@ -6,3 +6,9 @@ image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
 date : 2021-10-21
 externalURL: "https://fmasworkshop.github.io/FMAS2021/"
 ---
+<html>
+    <head>
+	<meta http-equiv="refresh" content="0; url=https://fmasworkshop.github.io/FMAS2021/">
+	<link rel="canonical" href="https://fmasworkshop.github.io/FMAS2021/" />
+    </head>
+</html>
