--- a/pubs.bib
+++ b/pubs.bib
@@ -303,13 +303,16 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span class="raeng">RAEng</span>]}
       }
 
-@inproceedings{Cardoso21b,
-      author={Rafael C. Cardoso and John L. Michaloski and Craig Schlenoff and Angelo Ferrando and Louise A. Dennis and Michael Fisher},
-      title={Agile Tasking of Robotic Systems with Explicit Autonomy},
-      booktitle={34th International FLAIRS Conference},
-      year={2021},
-      note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
-      }
+
+@InProceedings{Cardoso21b, 
+title={Agile Tasking of Robotic Systems with Explicit Autonomy},
+volume={34},
+DOI={10.32473/flairs.v34i1.128481}, 
+booktitle={The International FLAIRS Conference Proceedings},
+author={Cardoso, Rafael C. and Michaloski, John L. and Schlenoff, Craig and Ferrando, Angelo and Dennis, Louise A. and Fisher, Michael},
+year={2021},
+note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+}
 
 @article{Cardoso21a, 
 title={A Review of Agent-Based Programming for Multi-Agent Systems}, 
